--- a/app/Resources/views/user/one.html.twig
+++ b/app/Resources/views/user/one.html.twig
@@ -121,10 +121,10 @@
                 $('.valideInscr').unbind('click').click(function () {
                     $.ajax({
                         type: "POST",
-                        url: "{{ path('inscrireUser_ajax') }}",
+                        url: "{{ path('inscrireUsers_ajax') }}",
                         data: {
                             idItem: idItem,
-                            idUser: idUser,
+                            idUsers: [idUser],
                             typeItem: typeItem,
                             idRole: $('.selectRole').val()
 
@@ -150,10 +150,10 @@
                 $('.valideDesinscr').unbind('click').click(function () {
                     $.ajax({
                         type: "POST",
-                        url: "{{ path('desInscrireUser_ajax') }}",
+                        url: "{{ path('desInscrireUsers_ajax') }}",
                         data: {
                             idItem: idItem,
-                            idUser: idUser,
+                            idUsers: [idUser],
                             typeItem: typeItem
                         },
                         dataType: "json",
@@ -179,10 +179,10 @@
                 $('.valideInscr').unbind('click').click(function () {
                     $.ajax({
                         type: "POST",
-                        url: "{{ path('inscrSessUser_ajax') }}",
+                        url: "{{ path('inscrSessUsers_ajax') }}",
                         data: {
                             id: idSession,
-                            idUser: idUser,
+                            idUsers: [idUser],
                             idRole: $('.selectRole').val()
                         },
                         dataType: "json",
@@ -196,10 +196,10 @@
             function desinscrireUserSession(idUser, idSession) {
                 $.ajax({
                     type: "POST",
-                    url: "{{ path('desinscrSessUser_ajax') }}",
+                    url: "{{ path('desinscrSessUsers_ajax') }}",
                     data: {
                         id: idSession,
-                        idUser: idUser
+                        idUsers: [idUser]
                     },
                     dataType: "json",
                     success: function (response) {
@@ -233,10 +233,10 @@
                 $('.valideInscr').unbind('click').click(function () {
                     $.ajax({
                         type: "POST",
-                        url: "{{ path('inscrireUser_ajax') }}",
+                        url: "{{ path('inscrireUsers_ajax') }}",
                         data: {
                             idItem: idCoh,
-                            idUser: idUser,
+                            idUsers: [idUser],
                             typeItem: 'cohorte',
                             idRole: $('.selectRole').val()
                         },
@@ -251,10 +251,10 @@
             function desinscrireUserCohorte(idUser, idCoh) {
                 $.ajax({
                     type: "POST",
-                    url: "{{ path('desInscrireUser_ajax') }}",
+                    url: "{{ path('desInscrireUsers_ajax') }}",
                     data: {
                         idItem: idCoh,
-                        idUser: idUser,
+                        idUsers: [idUser],
                         typeItem: 'cohorte'
                     },
                     dataType: "json",
@@ -680,8 +680,12 @@
                         {% for ressourceAcces in userStatRess %}
                             <tr class="userLine">
                                 <td>{{ ressourceAcces.id }}</td>
-                                <td><a href="{{ path('itemUsers', {id: ressourceAcces.ressource.cours.discipline.id, type: "discipline" }) }}">{{ ressourceAcces.ressource.cours.discipline.nom }}</a></td>
-                                <td><a href="{{ path('itemUsers', {id: ressourceAcces.ressource.cours.id, type: "cours" }) }}">{{ ressourceAcces.ressource.cours.nom }}</a></td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: ressourceAcces.ressource.cours.discipline.id, type: "discipline" }) }}">{{ ressourceAcces.ressource.cours.discipline.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: ressourceAcces.ressource.cours.id, type: "cours" }) }}">{{ ressourceAcces.ressource.cours.nom }}</a>
+                                </td>
                                 <td>{{ ressourceAcces.ressource.nom }}</td>
                                 <td>{{ ressourceAcces.dateAcces|localizeddate('none', 'none', null, null, 'd LLLL Y à H:mm' ) }}</td>
                             </tr>
@@ -723,9 +727,15 @@
                         {% for copie in copies %}
                             <tr class="userLine">
                                 <td>{{ copie.copie.id }}</td>
-                                <td><a href="{{ path('itemUsers', {id: copie.copie.devoir.cours.discipline.id, type: "discipline" }) }}">{{ copie.copie.devoir.cours.discipline.nom }}</a></td>
-                                <td><a href="{{ path('itemUsers', {id: copie.copie.devoir.cours.id, type: "cours" }) }}">{{ copie.copie.devoir.cours.nom }}</a></td>
-                                <td><a href="{{ path('oneDevoirEns', {id:copie.copie.devoir.id}) }}">{{ copie.copie.devoir.nom }}</a></td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: copie.copie.devoir.cours.discipline.id, type: "discipline" }) }}">{{ copie.copie.devoir.cours.discipline.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: copie.copie.devoir.cours.id, type: "cours" }) }}">{{ copie.copie.devoir.cours.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('oneDevoirEns', {id:copie.copie.devoir.id}) }}">{{ copie.copie.devoir.nom }}</a>
+                                </td>
                                 <td>{{ copie.copie.note }} / {{ copie.copie.devoir.bareme }}</td>
                                 <td>{{ copie.copie.dateCreation|localizeddate('none', 'none', null, null, 'd LLLL Y à H:mm' ) }}</td>
                             </tr>
@@ -805,8 +815,12 @@
                         {% for sujet in sujets %}
                             <tr class="userLine">
                                 <td>{{ sujet.id }}</td>
-                                <td><a href="{{ path('itemUsers', {id: sujet.forum.cours.discipline.id, type: "discipline" }) }}">{{ sujet.forum.cours.discipline.nom }}</a></td>
-                                <td><a href="{{ path('itemUsers', {id: sujet.forum.cours.id, type: "cours" }) }}">{{ sujet.forum.cours.nom }}</a></td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: sujet.forum.cours.discipline.id, type: "discipline" }) }}">{{ sujet.forum.cours.discipline.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: sujet.forum.cours.id, type: "cours" }) }}">{{ sujet.forum.cours.nom }}</a>
+                                </td>
                                 <td><a href="{{ path('forum', {id: sujet.forum.id }) }}">{{ sujet.forum.nom }}</a></td>
                                 <td><a href="{{ path('forumSujet', {id: sujet.id }) }}">{{ sujet.titre }}</a></td>
                                 <td>{{ sujet.createdAt|localizeddate('none', 'none', null, null, 'd LLLL Y à H:mm' ) }}</td>
@@ -850,10 +864,17 @@
                         {% for post in posts %}
                             <tr class="userLine">
                                 <td>{{ post.id }}</td>
-                                <td><a href="{{ path('itemUsers', {id: post.sujet.forum.cours.discipline.id, type: "discipline" }) }}">{{ post.sujet.forum.cours.discipline.nom }}</a></td>
-                                <td><a href="{{ path('itemUsers', {id: post.sujet.forum.cours.id, type: "cours" }) }}">{{ post.sujet.forum.cours.nom }}</a></td>
-                                <td><a href="{{ path('forum', {id: post.sujet.forum.id }) }}">{{ post.sujet.forum.nom }}</a></td>
-                                <td><a href="{{ path('forumSujet', {id: post.sujet.id }) }}">{{ post.sujet.titre }}</a></td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: post.sujet.forum.cours.discipline.id, type: "discipline" }) }}">{{ post.sujet.forum.cours.discipline.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('itemUsers', {id: post.sujet.forum.cours.id, type: "cours" }) }}">{{ post.sujet.forum.cours.nom }}</a>
+                                </td>
+                                <td>
+                                    <a href="{{ path('forum', {id: post.sujet.forum.id }) }}">{{ post.sujet.forum.nom }}</a>
+                                </td>
+                                <td><a href="{{ path('forumSujet', {id: post.sujet.id }) }}">{{ post.sujet.titre }}</a>
+                                </td>
                                 <td>{{ post.texte|striptags|slice(0, 100) }}...</td>
                                 <td>{{ post.createdAt|localizeddate('none', 'none', null, null, 'd LLLL Y à H:mm' ) }}</td>
                             </tr>
@@ -1028,7 +1049,9 @@
                                     Sélectionnez un role pour cette inscription
                                     <select class="selectRole">
                                         {% for role in roles %}
-                                            <option value="{{ role.id }}">{{ role.nom }}</option>
+                                            {% if role.nom != "Admin" %}
+                                                <option value="{{ role.id }}">{{ role.nom }}</option>
+                                            {% endif %}
                                         {% endfor %}
                                     </select>
                                 </div>
