Modifications Statuts et actions en lots sur les inscriptions

--- a/app/Resources/views/pagesFixes/pageSuppressionCompte.html.twig
+++ b/app/Resources/views/pagesFixes/pageSuppressionCompte.html.twig
@@ -6,7 +6,7 @@
         <div class="container">
             <h2 class="color3">L’AFADEC</h2>
             <ul class="breadcrumb">
-                <li class="color3">E-former les formateur</li>
+                <li class="color3">Effacer mon compte</li>
             </ul>
         </div>
     </div>
@@ -21,7 +21,7 @@
                 <p>Pour supprimer votre compte, veuillez faire une demande, soit :</p>
                 <ul>
                     <li>En envoyant un email à l'adresse <a href="mailto:contact.afadec@gmail.com">contact.afadec@gmail.com</a></li>
-                    <li>En expliquant votre demande dans le formulaire ci-dessous</li>
+                    <li>En expliquant votre demande dans le formulaire présent sur cette page</li>
                 </ul>
 
                 <p>Dans les deux cas, pensez bien à confirmer vos nom, prénom, ainsi que l'adresse mail qui vous a servi à vous inscrire sur la plateforme.</p>
