--- a/app/Resources/views/user/confirmStatutMail.html.twig
+++ b/app/Resources/views/user/confirmStatutMail.html.twig
@@ -3,7 +3,7 @@
 <p>Vous avez créé un compte sur la plateforme de l'Afadec avec un statut {{ user.statut }}.</p>
 
 {% if isConfirm %}
-    <p>Ce statut a été accepté par l'administration de l'afadec. Vous pouvez maintenant profiter des fonctionnalités qui sont liées à ce statut :</p>
+    <p>Ce statut a été accepté par l'administration de l'Afadec. Vous pouvez maintenant profiter des fonctionnalités qui sont liées à ce statut :</p>
     <ul>
         <li>Votre compte ne sera pas désactivé lors des campagnes de désinscription</li>
         <li>Vous pourrez parcourir les sessions, sections, ressources qui ne sont pas actives (invisibles pour les étudiants)</li>
@@ -13,7 +13,7 @@
         {% endif %}
     </ul>
 {% else %}
-    <p>Ce statut a été refusé par l'administration de l'afadec. Vous pouvez néanmoins accéder à la plateforme, mais avec un statut d'Étudiant.</p>
+    <p>Ce statut a été refusé par l'administration de l'Afadec. Vous pouvez néanmoins accéder à la plateforme, mais avec un statut d'Étudiant.</p>
 {% endif %}
 
 <p>Merci!</p>
